<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expense</string>
    <string name="edit_category">Edit Category</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="overview">Overview</string>
    <string name="account">Accounts</string>
    <string name="report">Report</string>
    <string name="bills">Bills</string>
    <string name="new_account">New Account</string>
    <string name="discard_label">CANCEL</string>
    <string name="save_label">DONE</string>
    <string name="account_name_label">ACCOUNT NAME</string>
    <string name="hint_account_name">Account Name</string>
    <string name="start_balance_label">START BALANCE</string>
    <string name="zero_label">0.00</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="open_date_label">OPEN DATE</string>
    <string name="account_type_label">TYPE</string>
    <string name="auto_clear_label">CLEARED</string>
    <string name="type_label">TYPE NAME</string>
    <string name="hint_account_type_name">Account Type Name</string>
    <string name="icon_label">Icon</string>
    <string name="new_type">New Type</string>
    <string name="net_worth_label">Net Worth</string>
    <string name="outstanding_label">Outstanding</string>
    <string name="tranfer_label">Tranfer</string>
    <string name="text_label">text</string>
    <string name="setting">Settings</string>
    <string name="general_label">GENERAL</string>
    <string name="payee_label">Payee</string>
    <string name="category_label">Category</string>
    <string name="expense_label">Expense</string>
    <string name="income_label">Income</string>
    <string name="add_expense_label">New Category</string>
    <string name="add_income_label">New Category</string>
    <string name="up_category_label">CATEGORY</string>
    <string name="category_name_label">Category Name</string>
    <string name="hint_category_name">Category Name</string>
    <string name="select_icon">Select Icon: </string>
    <string name="select_parent">Select Parent</string>
    <string name="new_payee">New Payee</string>
    <string name="name_label">NAME</string>
    <string name="hide_name_label">Name</string>
    <string name="memo_label">MEMO</string>
    <string name="hide_memo_label">Memo</string>
    <string name="amount_label">AMOUNT</string>
    <string name="clear_label">CLEAR</string>
    <string name="edit_payee">Edit Payee</string>
    <string name="transaction_label">Transaction</string>
    <string name="cleared">Cleared</string>
    <string name="photo_camera">Photo from Camera</string>
    <string name="photo_library">Photo from Library</string>
    <string name="photo_delete">Delete this Photo</string>
    <string name="photo_view">View this Photo</string>
    <string name="bills_label">Bills</string>
    <string name="hint_bill">Bill Name</string>
    <string name="category_up_label">CATEGORY</string>
    <string name="duedate">DUE DATE</string>
    <string name="recurring">RECURRING</string>
    <string name="no_recurring">No Recurring</string>
    <string name="reminder">REMINDER</string>
    <string name="no_reminder">No Reminder</string>
    <string name="payee_up">PAYEE</string>
    <string name="unknown">Unknown</string>
    <string name="set_recurring">Recurring </string>
    <string name="dollar">$</string>
    <string name="date_label">DATE</string>
    <string name="account_label">ACCOUNT</string>
    <string name="photo_label">PHOTO</string>
    <string name="view_image">View Image</string>
    <string name="confirm">Confirm</string>
    <string name="split">Split</string>
    <string name="clear">Clear</string>
    <string name="from_account">FROM </string>
    <string name="to_account">TO ACCOUNT</string>
    <string name="balance_label">Balance: </string>
    <string name="out_label">Outstanding: </string>
    <string name="budget_label">Budget Available</string>
    <string name="budget">Budgets</string>
    <string name="set_budget">Set Budget</string>
    <string name="from_budget">FROM BUDGET</string>
    <string name="to_budget">TO BUDGET</string>
    <string name="edit_budget">Edit Budget</string>
    <string name="bill_details">Bill Details</string>
     <string name="pay_date">PAYMENT DATE</string>
	<string name="budget_list">Budget List</string>
	<string name="account_add">No accounts yet. Please tap the button \"+\" to add one.</string>
	<string name="bill_add">No bills for this month. You can create them by tapping the button \"+\".</string>
	<string name="budget_add">Please tap the button \"+\" to set up monthly budgets.</string>
	<string name="Export_label">Export</string>
	<string name="Export_trans">Export Transaction</string>
	<string name="Export_flow">Cash Flow</string>
	<string name="Export_rep">Export Report</string>
	<string name="payee_category">PAYEE &amp; CATEGORY</string>
	<string name="sync">Sync</string>
	<string name="related">Related</string>
	<string name="export_sync">EXPORT &amp; SYNC</string>
	
	
</resources>