<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/mLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <EditText
                    android:id="@+id/bill_edit"
                    style="@style/TextAppearance.EditEvent_Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:capitalize="sentences"
                    android:hint="@string/hint_bill"
                    android:minHeight="48dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/optional_label2"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/amount_label" />

                <EditText
                    android:id="@+id/amount_edit"
                    style="@style/TextAppearance.EditEvent_Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="100"
                    android:inputType="number"
                    android:maxLength="13"
                    android:minHeight="48dip"
                    android:singleLine="true"
                    android:text="@string/zero_label" >
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/duedate_label"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/category_up_label" />

                <Button
                    android:id="@+id/category_btn"
                    style="@style/TextAppearance.EditEvent_SpinnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dip"
                    android:gravity="left|center_vertical"
                    android:hint="@string/category_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/duedate_label"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/duedate" />

                <Button
                    android:id="@+id/duedate_btn"
                    style="@style/TextAppearance.EditEvent_SpinnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dip"
                    android:gravity="left|center_vertical"
                    android:hint="@string/duedate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/repeat_label"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/recurring" />

                <Button
                    android:id="@+id/recurring_btn"
                    style="@style/TextAppearance.EditEvent_SpinnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dip"
                    android:gravity="left|center_vertical"
                    android:hint="@string/no_recurring" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/event_info_reminders_label"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/reminder" />

                <Button
                    android:id="@+id/reminder_btn"
                    style="@style/TextAppearance.EditEvent_SpinnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dip"
                    android:gravity="left|center_vertical"
                    android:hint="@string/no_reminder" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/event_info_reminders_label"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/payee_up" />

                <Button
                    android:id="@+id/payee_btn"
                    style="@style/TextAppearance.EditEvent_SpinnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dip"
                    android:gravity="left|center_vertical"
                    android:hint="@string/unknown" />
            </LinearLayout>
            
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:focusable="true"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/memo_edit"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:capitalize="sentences"
            android:hint="@string/hide_memo_label"
            android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
            android:minHeight="48dip" />
    </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>