<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingBottom="6dp" >

        <TextView
            android:id="@+id/optional_label1"
            style="@style/TextAppearance.EditEvent_LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:text="@string/category_name_label" />

        <EditText
            android:id="@+id/category_edit"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
             android:focusable="true"
            android:capitalize="sentences"
            android:hint="@string/hint_category_name"
            android:minHeight="48dip" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/mRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bag_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/select_icon"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/category_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingBottom="6dp" >

        <TextView
            android:id="@+id/optional_label3"
            style="@style/TextAppearance.EditEvent_LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:text="@string/select_parent" />

        <Button
            android:id="@+id/parent_btn"
            style="@style/TextAppearance.EditEvent_SpinnerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dip"
            android:gravity="left|center_vertical" />
    </LinearLayout>

</LinearLayout>