<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/optional_label1"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/name_label" />

                <EditText
                    android:id="@+id/payee_edit"
                    style="@style/TextAppearance.EditEvent_Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:capitalize="sentences"
                    android:hint="@string/hide_name_label"
                    android:minHeight="48dip" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/optional_label4"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/up_category_label" />

                <Button
                    android:id="@+id/category_btn"
                    style="@style/TextAppearance.EditEvent_SpinnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dip"
                    android:gravity="left|center_vertical" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="6dp" >

                <TextView
                    android:id="@+id/optional_label1"
                    style="@style/TextAppearance.EditEvent_LabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dip"
                    android:text="@string/memo_label" />

                <EditText
                    android:id="@+id/memo_edit"
                    style="@style/TextAppearance.EditEvent_Value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:capitalize="sentences"
                    android:hint="@string/hide_memo_label"
                    android:minHeight="48dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>