<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:focusable="true"
        android:orientation="vertical"
        android:paddingBottom="6dp" >

        <TextView
            android:id="@+id/optional_label1"
            style="@style/TextAppearance.EditEvent_LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dip"
            android:text="@string/type_label" />

        <EditText
            android:id="@+id/account_type_edit"
            style="@style/TextAppearance.EditEvent_Value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:capitalize="sentences"
            android:hint="@string/hint_account_type_name"
            android:minHeight="48dip" />
    </LinearLayout>

    <TextView
        android:id="@+id/icon_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout1"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/icon_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        />

    <GridView
        android:id="@+id/mGridView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/icon_label"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:columnWidth="50dp"
        android:horizontalSpacing="2dp"
        android:numColumns="6"
        android:stretchMode="columnWidth"
        android:verticalSpacing="15dp" />

</RelativeLayout>