<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/budget_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/icon_credit_card" />

        <TextView
            android:id="@+id/budget_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageView1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/budget_label" />

        <TextView
            android:id="@+id/budget_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/zero_label" />

        <TextView
            android:id="@+id/currency_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/budget_amount"
            android:text="@string/dollar" />

        <ProgressBar
            android:id="@+id/mProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:layout_below="@+id/budget_amount"
            android:layout_toRightOf="@+id/imageView1"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:max="50"
            android:progress="30"
            android:progressDrawable="@drawable/progressbar_bac" />
    </RelativeLayout>

</LinearLayout>